--- a/package.json
+++ b/package.json
@@ -9,20 +9,22 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/srodrig284/burger.git"
+    "url": "git+https://github.com/srodrig284/SequelizedBurger.git"
+
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/srodrig284/burger/issues"
+    "url": "https://github.com/srodrig284/SequelizedBurger/issues"
   },
-  "homepage": "https://github.com/srodrig284/burger#readme",
+  "homepage": "https://github.com/srodrig284/SequelizedBurger#readme",
   "dependencies": {
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "express-handlebars": "^3.0.0",
     "method-override": "^2.3.8",
-    "mysql": "^2.13.0"
+    "mysql": "^2.13.0",
+    "sequelize": "^3.30.4"
   }
 }
